--- a/agent/oribit_agent/pyproject.toml
+++ b/agent/oribit_agent/pyproject.toml
@@ -12,10 +12,16 @@ dependencies = [
     "pydantic>=2.11.7",
     "requests>=2.32.4",
     "uvicorn[standard]>=0.35.0",
+    "websockets>=12.0",
+    "playwright>=1.40.0",
+    "openai>=1.30.0",
+    "anthropic>=0.25.0",
+    "typer>=0.12.5",
+    "spotipy>=2.22.1",
 ]
 
 [project.scripts]
-oribit-agent = "oribit_agent:main"
+orbit = "oribit_agent:main"
 
 [build-system]
 requires = ["uv_build>=0.8.0,<0.9"]
